tests/06-invalid-input.stderr
error: unexpected end of input, Unknown attribute `field`, expected `fields`, `custom` or `span`
  --> tests/06-invalid-input.rs:10:1
   |
10 | #[params(field(user.id))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `params` (in Nightly builds, run with -Z macro-backtrace for more info)
